--- a/CMake/UseSlicer.cmake.in
+++ b/CMake/UseSlicer.cmake.in
@@ -70,7 +70,7 @@ endif()
 if(NOT Slicer_SKIP_SlicerBlockSetCMakeOSXVariables)
   # Note: By setting CMAKE_OSX_* variables before any enable_language() or project() calls,
   #       we ensure that the bitness will be properly detected.
-  include(SlicerBlockSetCMakeOSXVariables)
+  #include(SlicerBlockSetCMakeOSXVariables)
 else()
   _slicer_skip_message("SlicerBlockSetCMakeOSXVariables")
 endif()
