STYLE: RSS module - Clean up code
Remove comment code
Remove files from txx to hxx
Remove omp preprocessor because this introduce racing condition.

--- a/Modules/CLI/RobustStatisticsSegmenter/CMakeLists.txt
+++ b/Modules/CLI/RobustStatisticsSegmenter/CMakeLists.txt
@@ -7,12 +7,11 @@ SEMMacroBuildCLI(
   LOGO_HEADER ${Slicer_SOURCE_DIR}/Resources/NAMICLogo.h
   TARGET_LIBRARIES ${ITK_LIBRARIES}
   ADDITIONAL_SRCS
-    labelMapPreprocessor.h
     SFLS.h
     SFLSSegmentor3D.h
-    SFLSSegmentor3D.txx
-    SFLSRobustStatSegmentor3DLabelMap_single.h
-    SFLSRobustStatSegmentor3DLabelMap_single.txx
+    SFLSSegmentor3D.hxx
+    SFLSRobustStatSegmentor3DLabelMap.h
+    SFLSRobustStatSegmentor3DLabelMap.hxx
   INCLUDE_DIRECTORIES
     ${vtkTeem_INCLUDE_DIRS}
     ${SlicerBaseCLI_SOURCE_DIR} ${SlicerBaseCLI_BINARY_DIR}
