ENH: Re-use volume logic in qMRMLVolumeInfoWidget::setLabelMap
To avoid maintenance hell and code duplication, the widget "qMRMLVolumeInfoWidget"
has been moved from Libs/MRML/Widget to Loadable/Volumes/Widget to that
it can easily depend on the volume logic.

Since the widget name remained the same, no issue is expected in
python extension. On the other hand, c++ extension making use of that
widget will have to explicitly link against target "qSlicerVolumesModuleWidgets"
and include associated include directories.

See #3304

--- a/Modules/Loadable/Volumes/Widgets/CMakeLists.txt
+++ b/Modules/Loadable/Volumes/Widgets/CMakeLists.txt
@@ -4,10 +4,19 @@ set(KIT ${PROJECT_NAME})
 
 set(${KIT}_EXPORT_DIRECTIVE "Q_SLICER_QTMODULES_${MODULE_NAME_UPPER}_WIDGETS_EXPORT")
 
+# XXX This should be set as a cache variable in SlicerMacroBuildModuleLogic
+set(vtkSlicer${MODULE_NAME}ModuleLogic_INCLUDE_DIRS
+  ${CMAKE_CURRENT_SOURCE_DIR}/../Logic
+  ${CMAKE_CURRENT_BINARY_DIR}/../Logic
+  )
+
 set(${KIT}_INCLUDE_DIRECTORIES
+  ${vtkSlicer${MODULE_NAME}ModuleLogic_INCLUDE_DIRS}
   )
 
 set(${KIT}_SRCS
+  qMRMLVolumeInfoWidget.cxx
+  qMRMLVolumeInfoWidget.h
   qSlicerDiffusionTensorVolumeDisplayWidget.cxx
   qSlicerDiffusionTensorVolumeDisplayWidget.h
   qSlicerDiffusionWeightedVolumeDisplayWidget.cxx
@@ -23,6 +32,7 @@ set(${KIT}_SRCS
   )
 
 set(${KIT}_MOC_SRCS
+  qMRMLVolumeInfoWidget.h
   qSlicerDiffusionTensorVolumeDisplayWidget.h
   qSlicerDiffusionWeightedVolumeDisplayWidget.h
   qSlicerLabelMapVolumeDisplayWidget.h
@@ -32,6 +42,7 @@ set(${KIT}_MOC_SRCS
   )
 
 set(${KIT}_UI_SRCS
+  Resources/UI/qMRMLVolumeInfoWidget.ui
   Resources/UI/qSlicerDiffusionTensorVolumeDisplayWidget.ui
   Resources/UI/qSlicerDiffusionWeightedVolumeDisplayWidget.ui
   Resources/UI/qSlicerDTISliceDisplayWidget.ui
@@ -44,6 +55,7 @@ set(${KIT}_RESOURCES
   )
 
 set(${KIT}_TARGET_LIBRARIES
+  vtkSlicer${MODULE_NAME}ModuleLogic
   )
 
 #-----------------------------------------------------------------------------
@@ -63,3 +75,6 @@ SlicerMacroBuildModuleWidgets(
 if(BUILD_TESTING)
   add_subdirectory(Testing)
 endif()
+
+#-----------------------------------------------------------------------------
+add_subdirectory(DesignerPlugins)
