COMP: Find LibArchive/CURL/OpenIGTLink/ZLIB package where required.
This commit complements the previous one and will help reducing the number
of parameters passer to the compiler/linker. See #3741

--- a/Base/Logic/CMakeLists.txt
+++ b/Base/Logic/CMakeLists.txt
@@ -50,6 +50,11 @@ list(APPEND ITK_INCLUDE_DIRS
   )
 include(${ITK_USE_FILE})
 
+#
+# LibArchive
+#
+find_package(LibArchive REQUIRED MODULE)
+
 # --------------------------------------------------------------------------
 # Subdirectories
 # --------------------------------------------------------------------------
