--- a/Modules/Remote/CMakeLists.txt
+++ b/Modules/Remote/CMakeLists.txt
@@ -6,6 +6,14 @@ if(Slicer_EP_LABEL_REMOTE_MODULE)
     set(LAUNCH_EXE ${SEM_LAUNCH_COMMAND})
   endif()
 
+  #
+  # XXX OpenIGTLink - This call to find_package should be moved into OpenIGTLinkIF
+  #
+  if(Slicer_USE_OpenIGTLink)
+    find_package(OpenIGTLink REQUIRED)
+    include(${OpenIGTLink_USE_FILE})
+  endif()
+
   foreach(varname ${Slicer_EP_LABEL_REMOTE_MODULE})
     set(_source_dir ${${varname}})
     get_filename_component(_project_name ${_source_dir} NAME_WE)
