COMP: Find LibArchive/CURL/OpenIGTLink/ZLIB package where required.
This commit complements the previous one and will help reducing the number
of parameters passer to the compiler/linker. See #3741

--- a/Base/Logic/CMakeLists.txt
+++ b/Base/Logic/CMakeLists.txt
@@ -7,6 +7,11 @@ if(Slicer_BUILD_CLI_SUPPORT)
   find_package(SlicerExecutionModel REQUIRED ModuleDescriptionParser)
 endif()
 
+#
+# LibArchive
+#
+find_package(LibArchive REQUIRED MODULE)
+
 # --------------------------------------------------------------------------
 # Subdirectories
 # --------------------------------------------------------------------------
