--- a/CMake/SlicerCPackBundleFixup.cmake.in
+++ b/CMake/SlicerCPackBundleFixup.cmake.in
@@ -148,7 +148,7 @@ function(fixup_bundle_with_plugins app)
     "${app_dir}/Contents/@Slicer_QtPlugins_DIR@/designer/*Plugins.so"
     "${app_dir}/Contents/@Slicer_QtPlugins_DIR@/designer/*.dylib"
     "${app_dir}/Contents/@Slicer_QtPlugins_DIR@/iconengines/*Plugin.so"
-    "${app_dir}/Contents/@Slicer_QtPlugins_DIR@/styles/*Plugin.so"
+    "${app_dir}/Contents/@Slicer_QtPlugins_DIR@/styles/*Plugin[s].so"
     "${app_dir}/Contents/@Slicer_QtPlugins_DIR@/imageformats/*${suffix}"
     "${app_dir}/Contents/@Slicer_QtPlugins_DIR@/sqldrivers/*${suffix}"
     )
@@ -311,7 +311,7 @@ function(fixup_bundle_with_plugins app)
   set(inner_re "1|a|bat|bmp|c|cc|cfg|cmake|conf|css|ctypes|cxx|dat|def|doc|dylib|egg-info|enc")
   set(inner_re "${inner_re}|eps|example|f|f90|fits|gif|gz|h|hxx|i|icns|ico|in|ini|itk|log|md5")
   set(inner_re "${inner_re}|mhd|mrml|mrml_remote|msg|nhdr|nib|nrrd|pkl|plist|png|ps|py|pyc|pyf")
-  set(inner_re "${inner_re}|pyw|pyx|raw|sample|so|supp|tcl|txt|ui|xml|exe")
+  set(inner_re "${inner_re}|pyw|pyx|raw|sample|so|supp|tcl|txt|ui|xml|exe|mexw32|mexw64")
   set(GP_IS_FILE_EXECUTABLE_EXCLUDE_REGEX "\\.(${inner_re})$")
 
   fixup_bundle(
