ENH: Add vtkEventSpy
Based on QtSignalSpy, vtkEventSpy can observe any event of any object
and records its invocation.

vtkEventSpy itself is an array of vtkVariant arrays. Each emission of the
event will append one item to the array, containing the \a eventId,
\a caller and \a callData.

Either by deriving the vtkEventSpy or registering functors, tt also
provides a simple way to record object properties at the time
of the event emission.

--- a/Libs/vtkAddon/CMakeLists.txt
+++ b/Libs/vtkAddon/CMakeLists.txt
@@ -56,6 +56,8 @@ endif()
 # Sources
 # --------------------------------------------------------------------------
 set(vtkAddon_SRCS
+  vtkEventSpy.cxx
+  vtkEventSpy.h
   vtkLoggingMacros.h
   vtkTestingOutputWindow.cxx
   vtkTestingOutputWindow.h
